feat(apple): add app store subscriptions
